--- a/src/03.Presentation/App.EndPoints.MVC.HWW22/appsettings.json
+++ b/src/03.Presentation/App.EndPoints.MVC.HWW22/appsettings.json
@@ -1,9 +1,34 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq" ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/log-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+      ,
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341",
+          "apiKey": "EmpXM16li0VVYbs8gqam"
+        }
+      }
+
+    ]
   },
   "AllowedHosts": "*"
 }
