--- a/src/03.Presentation/App.EndPoints.MVC.HWW22/App.EndPoints.MVC.HWW22.csproj
+++ b/src/03.Presentation/App.EndPoints.MVC.HWW22/App.EndPoints.MVC.HWW22.csproj
@@ -34,4 +34,11 @@
     <ProjectReference Include="..\..\02.Infrastructure\Db\App.Infra.Db.SqlServer.Ef\App.Infra.Db.SqlServer.Ef.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Controllers\" />
+    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\Admin\Views\" />
+  </ItemGroup>
+
 </Project>
