Edit Order Deatail and view  Cart

--- a/src/03.Presentation/App.EndPoints.MVC.HWW22/appsettings.json
+++ b/src/03.Presentation/App.EndPoints.MVC.HWW22/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq" ],
+    "Using": [ "Serilog.Sinks.Seq" ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -9,17 +9,17 @@
       }
     },
     "WriteTo": [
-      {
-        "Name": "Console"
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "logs/log-.txt",
-          "rollingInterval": "Day"
-        }
-      }
-      ,
+      //{
+      //  "Name": "Console"
+      //},
+      //{
+      //  "Name": "File",
+      //  "Args": {
+      //    "path": "logs/log-.txt",
+      //    "rollingInterval": "Day"
+      //  }
+      //}
+      //,
       {
         "Name": "Seq",
         "Args": {
